objects/Pure_Success_Package__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PureSuccess Package</relationshipLabel>
        <relationshipName>PureSuccess_Package</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Available_Service_element__c</fullName>
        <formula>IF(AND(Contract_End_Date__c &gt; TODAY(),  Service_Element_Count__c &gt; 0),&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available Service element</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <formula>Order__r.Maintenance_End__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <formula>Order__r.Maintenance_Start__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DaysToexpiration__c</fullName>
        <formula>Contract_End_Date__c - Today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DaysToexpiration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OPP_Offering_Platform__c</fullName>
        <formula>TEXT(Order__r.Opportunity__r.Lines_of_Businesses__c) + &apos; &apos; + TEXT(Order__r.Opportunity__r.Primary_Line_of_Business__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OPP Offering / Platform</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>PureSuccess Package</relationshipLabel>
        <relationshipName>PureSuccess_Package</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Package_Offering_Type__c</fullName>
        <formula>Order__r.Order_Category__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Package Offering Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Type__c</fullName>
        <label>Package Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pure Success</fullName>
                </value>
                <value>
                    <fullName>A la Carte</fullName>
                </value>
                <value>
                    <fullName>A la Carte Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Group_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This will have value only in case if Package type is of Al Carte.</description>
        <label>Product Group Item</label>
        <referenceTo>Product_Group_Item__c</referenceTo>
        <relationshipLabel>PureSuccess Package</relationshipLabel>
        <relationshipName>PureSuccess_Package</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Group_To_Account__c</fullName>
        <formula>Product_Group__c +  Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Group To Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Group</label>
        <referenceTo>Product_Group__c</referenceTo>
        <relationshipLabel>PureSuccess Package</relationshipLabel>
        <relationshipName>PureSuccess_Package</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>PureSuccess Package</relationshipLabel>
        <relationshipName>PureSuccess_Package</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Refresh_date__c</fullName>
        <label>Refresh date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Contract_No__c</fullName>
        <description>Store the Service Contract from the Order -&gt; Service Contract -&gt; Name</description>
        <label>Service Contract No</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Contract__c</fullName>
        <formula>Order__r.Contract_Lookup__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Contract</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Element_Count__c</fullName>
        <label>Service Element Count</label>
        <summaryFilterItems>
            <field>Package_Services__c.Status__c</field>
            <operation>equals</operation>
            <value>Allocated</value>
        </summaryFilterItems>
        <summaryForeignKey>Package_Services__c.PureSuccess_Package__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Token_Status_Expired__c</fullName>
        <formula>IF( AND(TODAY() &gt; Contract_End_Date__c, OR(ISPICKVAL(Token_Status__c, &apos;Allocated&apos;),ISPICKVAL(Token_Status__c, &apos;Expired&apos;))), &apos;Expired&apos;, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Token Status Expired</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token_Status__c</fullName>
        <label>Package Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Allocated</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Consumed</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tokens__c</fullName>
        <label>Tokens</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>PureSuccess Package</label>
    <nameField>
        <displayFormat>PSP-{0000}</displayFormat>
        <label>Pure Success Package Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PureSuccess Package</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>